<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_bug_error_suggest"
        android:textColor="@color/green_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:hint="@string/description"
        android:inputType="textMultiLine|textCapSentences"
        android:maxHeight="150dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:textColor="@color/gray_dark"
        android:textColorHint="#656565"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/recreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:hint="@string/steps"
        android:inputType="textMultiLine|textCapSentences"
        android:maxHeight="200dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:textColor="@color/gray_dark"
        android:textColorHint="#656565"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/button_tint_white"
            android:text="@string/cancel"
            android:textColor="@color/green_dark"
            android:textSize="15sp"
            app:cornerRadius="5dp"
            app:strokeColor="@color/green_dark"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/button_tint_green"
            android:text="@string/submit_report"
            android:textColor="#E1E1E1"
            android:textSize="15sp"
            app:cornerRadius="5dp" />

    </LinearLayout>

</LinearLayout>