<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/add_vacant"
        android:textAllCaps="true"
        android:textColor="@color/green_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/day_picker"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/spinner"
        android:entries="@array/days"
        android:popupBackground="@drawable/spinner_view"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:hint="@string/start_time"
            android:inputType="time"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_dark"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/btn_start_picker"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/input_bg"
            android:contentDescription="@string/time_picker"
            android:src="@drawable/clock" />

        <EditText
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:hint="@string/end_time"
            android:inputType="time"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_dark"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/btn_end_picker"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/input_bg"
            android:contentDescription="@string/time_picker"
            android:src="@drawable/clock" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/button_tint_white"
            android:text="@string/cancel"
            android:textColor="@color/green_dark"
            android:textSize="15sp"
            app:cornerRadius="5dp"
            app:strokeColor="@color/green_dark"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/button_tint_green"
            android:text="@string/add"
            android:textSize="15sp"
            app:cornerRadius="5dp" />

    </LinearLayout>

</LinearLayout>