<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textColor="@color/green_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColor="@color/gray_dark"
            android:textColorHint="#656565"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_tint_white"
                android:text="@string/cancel"
                android:textColor="@color/green_dark"
                android:textSize="15sp"
                app:cornerRadius="5dp"
                app:strokeColor="@color/green_dark"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_tint_green"
                android:text="@string/send_reset"
                android:textSize="15sp"
                app:cornerRadius="5dp" />

        </LinearLayout>


    </LinearLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/layout" />

</RelativeLayout>