<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.manager.Manager">

    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/menu_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/image_button"
            android:contentDescription="@string/menu_open"
            android:src="@drawable/menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@id/btn_debug"
            android:layout_toEndOf="@+id/menu_open"
            android:text="@string/app_name"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_debug"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/image_button"
            android:contentDescription="@string/test"
            android:src="@drawable/debug"
            android:visibility="gone" />

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        app:tabBackground="@drawable/tab_bg"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorAnimationMode="linear"
        app:tabIndicatorColor="@null"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="stretch"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/facilitator" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faculty" />

    </com.google.android.material.tabs.TabLayout>

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/search_bar"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab"
        app:layout_constraintWidth_percent="0.95" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_Refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_Views"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_Notifications"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/notice"
            android:background="@drawable/circle_green"
            android:contentDescription="@string/notifications"
            android:src="@drawable/notifications" />

        <TextView
            android:id="@+id/notice"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-15dp"
            android:layout_marginBottom="-15dp"
            android:layout_toEndOf="@+id/btn_Notifications"
            android:background="@drawable/circle_red"
            android:gravity="center"
            android:text="@string/notice"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

    <include
        android:id="@+id/manager_menu"
        layout="@layout/menu" />

    <include
        android:id="@+id/notifications"
        layout="@layout/notifications" />

    <include
        android:id="@+id/loading"
        layout="@layout/progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>