<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.test.Test">

    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/image_button"
            android:contentDescription="@string/back"
            android:padding="5dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/back"
            android:text="@string/app_name"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_corner"
        android:gravity="center"
        android:textColor="@color/green_dark"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btn_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/button_tint_green"
        android:letterSpacing="0.2"
        android:text="@string/test"
        android:textAllCaps="true"
        android:textSize="17sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <include
        android:id="@+id/loading"
        layout="@layout/progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>